k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miragex-app-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      name: miragex-app-controller
  template:
    metadata:
      labels:
        name: miragex-app-controller
    spec:
      serviceAccountName: miragex-app-controller-sa
      volumes:
        - name: app-volume
          emptyDir: {}
      containers:
        - name: node-bot
          image: node:22-bookworm-slim
          imagePullPolicy: Always
          workingDir: /app
          command: ["sh", "-c"]
          args: ['npm install && npm run build && npm run start']
          volumeMounts:
            - name: "app-volume"
              mountPath: "/app"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: miragex-app-controller
  labels:
    app: miragex-app-controller
spec:
  type: ClusterIP
  selector:
    name: miragex-app-controller
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miragex-app-controller
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: neorb.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miragex-app-controller
                port:
                  number: 80
